--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "vendor": "vtex",
+  "vendor": "blacksipqa",
   "name": "store-newsletter",
   "version": "1.3.0",
   "title": "Store Newsletter",
